[package]
name = "lumos-nohash-hasher"
version = "0.2.2"
edition = "2021"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "An implementation of `std::hash::Hasher` which does not hash at all."
repository = "https://github.com/gaokanxu/lumos-nohash-hasher"
documentation = "https://docs.rs/lumos-nohash-hasher"
readme = "README.md"
keywords = ["hash", "hasher", "hashmap", "hashset"]

[features]
default = ["std"]
std = []
